--- a/index.html
+++ b/index.html
@@ -4,9 +4,124 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel ="stylesheet" type="text/css" href="./Assets/css/reset.css">
+    <link rel ="stylesheet" type="text/css" href="./Assets/css/style.css"/>
+    <title>Work_website</title>
 </head>
 <body>
-    
+    <header>
+        <div class="name">
+        <h1>Rudri Joshi</h1>
+        <nav class="info">
+            <ul class="content">
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#Contact">Contact</a>
+                </li>
+                <li>
+                    <a href="#Resources">Resources</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="background">
+        <img src="./Assets/css/images/Background.jpg" alt="Background Image", class="background-image">
+        <div class="subtitle-text">Career Portfolio</div>  
+    </div>
+    </header>
+<main>
+    <section class="about-me">
+            <h2>About Me</h2>
+        <div class="description">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                 ea commodo consequat.Duis aute irure dolor in reprehenderit in 
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </section>
+    <section>
+        <div class="work">
+            <h2>Work</h2>
+            <div class="flex-content">
+                <div class="graphics">
+                <a href="#" >
+                    <img src="./Assets/css/images/I1.jpg" class="project1" alt="Image with black background with mechanical icons and in capital letter project written in center">
+                    <div class="title1">
+                        <h3>Surf Report</h3>
+                        <h3>
+                            <p>MERN Stack</p>
+                        </h3>
+                    </div>
+                </a>
+                <div class="content1">
+                <a href="#">
+                    <img src="./Assets/css/images/I2.jpg" class="Project2" alt="Image of a man wearing a suit showing back and thinking lot of ideas which reflect that in order to build a project to imagine all creativity and contents to present a good project">
+                    <div class="title2">
+                        <h3>LED Wall</h3>
+                        <h3>
+                            <p>Node/loT</p>
+                        </h3>
+                    </div>
+                </a>
+                <a href="#">
+                    <img src="./Assets/css/images/I3.jpg"  class="Project3" alt="Iamge with blue background and yellow bulb surrounded with lots of icons like time icon, chat icon, calender and much more ">
+                    <div class="title3">
+                        <h3>Calculator</h3>
+                        <h3>
+                            <p>React/ Javascript/ CSS</p>
+                        </h3>
+                    </div>
+                </a>
+            </div>
+            <div class="content3">
+                <a href="#" class="project4">
+                    <img src="./Assets/css/images/I4.jpg" alt="Image with a pink background where right in the center there is a clock icon where women is sitting on the top right of clock and behind the clock their is a calender and infront of clock there are 3 books stacked up">
+                    <div>
+                        <h2>Project 4</h2>
+                    </div>
+                </a>
+                <a href="#" class="project5">
+                    <img src="./Assets/css/images/I5.jpg" alt="Image of many wheels which are linked together and on top of each wheel their is a person which reflects the teamwork in order to build a great project">
+                    <div>
+                        <h2>Project 5</h2>
+                    </div>
+                </a>
+                </div>
+            </div>
+            </div>
+         </div>
+        </section>
+    </main>
+    <footer>
+        <div class="contact-me">
+        <h2>Contact Me</h2>
+        <ul>
+            <li>
+                <a href="#">555.555.5555</a>
+            </li>
+            <li>
+                <a href="#">email@example.com</a>
+            </li>
+            <li>
+                <a href="#">Github</a>
+            </li>
+            <li>
+                <a href="#">Twitter</a>
+            </li>
+            <li>
+                <a href="#">LinkedIn</a>
+            </li>
+        </ul>
+        </div>
+
+    </footer>
 </body>
 </html>
