edited style.css file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="flex-content">
                 <div class="graphics">
                 <a href="#" >
-                    <img src="./Assets/css/images/I1.jpg" class="project1" alt="Image with black background with mechanical icons and in capital letter project written in center">
+                    <img src="./Assets/css/images/I1.jpg" class="project1" alt="Image of a person surfing">
                     <div class="title1">
                         <h3>Surf Report</h3>
                         <h3>
@@ -63,7 +63,7 @@
                 </a>
                 <div class="content1">
                 <a href="#">
-                    <img src="./Assets/css/images/I2.jpg" class="Project2" alt="Image of a man wearing a suit showing back and thinking lot of ideas which reflect that in order to build a project to imagine all creativity and contents to present a good project">
+                    <img src="./Assets/css/images/I2.jpg" class="Project2" alt="Image of LED wall">
                     <div class="title2">
                         <h3>LED Wall</h3>
                         <h3>
@@ -72,7 +72,7 @@
                     </div>
                 </a>
                 <a href="#">
-                    <img src="./Assets/css/images/I3.jpg"  class="Project3" alt="Iamge with blue background and yellow bulb surrounded with lots of icons like time icon, chat icon, calender and much more ">
+                    <img src="./Assets/css/images/I3.jpg"  class="Project3" alt="Image of person finger on a laptop">
                     <div class="title3">
                         <h3>Calculator</h3>
                         <h3>
@@ -83,13 +83,13 @@
             </div>
             <div class="content3">
                 <a href="#" class="project4">
-                    <img src="./Assets/css/images/I4.jpg" alt="Image with a pink background where right in the center there is a clock icon where women is sitting on the top right of clock and behind the clock their is a calender and infront of clock there are 3 books stacked up">
+                    <img src="./Assets/css/images/I4.jpg" alt="Image of puzzle">
                     <div>
                         <h2>Project 4</h2>
                     </div>
                 </a>
                 <a href="#" class="project5">
-                    <img src="./Assets/css/images/I5.jpg" alt="Image of many wheels which are linked together and on top of each wheel their is a person which reflects the teamwork in order to build a great project">
+                    <img src="./Assets/css/images/I5.jpg" alt="Image of two people running">
                     <div>
                         <h2>Project 5</h2>
                     </div>
